[tool.poetry]
name = "pipeline-heartbeat"
version = "0.0.2"
description = ""
authors = ["Yasin <wytm97@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
loguru = "0.7.2"
pika = "1.3.2"
requests = "~2.32.3"
redis = "~5.1.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
